# cookiecutter-pypackage

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  cookiecutter.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md  workflows
.github/workflows/: safety.yaml  tests-linux.yaml  tests-macos.yaml  tests-windows.yaml  tests.yaml
docs/: index.md  tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: helpers.py  test_bake_project.py  test_project.py
{{cookiecutter.project_dir}}/: .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
{{cookiecutter.project_dir}}/docs/: index.md  installation.md
{{cookiecutter.project_dir}}/tests/: conftest.py  test_{{cookiecutter.project_slug}}.py
